Fix hero body margin bug on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -86,6 +86,7 @@ footer .footer {
         transform: rotate(90deg);
       }
       .hero-body .copy-container {
+        margin-top: 0;
         background-color: $mta-background-transparent;
       }
     }
